--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "sevgi@sevgi.com",
+    "Issuer": "sevgi@sevgi.com",
+    "AccessTokenWxpiration": 10,
+    "SecurityKey":  "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
