--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,7 +2,7 @@
   "TokenOptions": {
     "Audience": "sevgi@sevgi.com",
     "Issuer": "sevgi@sevgi.com",
-    "AccessTokenWxpiration": 10,
+    "AccessTokenExpiration": 10,
     "SecurityKey":  "mysupersecretkeymysupersecretkey"
   },
   "Logging": {
